--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@arcgis/core": "^4.25.3",
-    "esri-loader": "^3.6.0",
+    "@types/arcgis-js-api": "^4.25.0",
+    "esri-loader": "^3.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
