--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["arcgis-js-api"]
+    "types": ["arcgis-js-api","jquery"]
   },
   "files": [
     "src/main.ts",
